--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "cookie-parser": "1.4.0",
     "winston": "2.1.1",
     "body-parser": "1.14.1",
-    "uuid": "2.0.1"
+    "uuid": "2.0.1",
+    "async": "1.5.0"
   },
   "engines": {
     "node": "4.2.3"
